<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp"
    android:background="@color/color_beige_3a" >

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_light"
        android:padding="6dp" />    
    
    <TextView
        android:id="@+id/check_in_food_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:text="@string/list_item_food_header_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/food_status_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="16dp" >

        <RadioButton
            android:id="@+id/food_status_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_food_answer_1_text" />

        <RadioButton
            android:id="@+id/food_status_some"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_food_answer_2_text" />

        <RadioButton
            android:id="@+id/food_status_cant_eat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_item_food_answer_3_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/list_item_food_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/list_item_food_question_text" />

</RelativeLayout>
