<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutDoctorsPatient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="7"
    tools:context="org.coursera.capstone.syman.DoctorViewPatientActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:background="@color/color_beige_1a" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:weightSum="3" >

            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/patient_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/patient_id_label" />

                <TextView
                    android:id="@+id/patient_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/patient_id_label"
                    android:text="1234" />

                <TextView
                    android:id="@+id/patient_view_full_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/patient_id_label"
                    android:text="Patient Full Name" />

                <TextView
                    android:id="@+id/patient_view_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/patient_view_date_of_birth_label"
                    android:text="@string/patient_phone_label" />

                <TextView
                    android:id="@+id/patient_view_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/patient_view_phone_label"
                    android:text="@string/patient_email_label" />

                <TextView
                    android:id="@+id/patient_view_diagnosis_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/patient_view_email_label"
                    android:text="@string/patient_diagnosis_label" />

                <TextView
                    android:id="@+id/patient_view_date_of_birth_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/patient_view_full_name_text"
                    android:text="@string/patient_date_of_birth_label" />

                <TextView
                    android:id="@+id/patient_view_date_of_birth_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/patient_view_date_of_birth_label"
                    android:layout_alignBottom="@+id/patient_view_date_of_birth_label"
                    android:layout_toRightOf="@+id/patient_view_date_of_birth_label"
                    android:layout_marginLeft="4dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/patient_view_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/patient_view_phone_label"
                    android:layout_alignBottom="@+id/patient_view_phone_label"
                    android:layout_toRightOf="@+id/patient_view_phone_label"
                    android:layout_marginLeft="4dp"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/patient_view_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/patient_view_phone_text"
                    android:layout_below="@+id/patient_view_phone_text"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/patient_view_diagnosis_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/patient_view_diagnosis_label"
                    android:layout_alignBottom="@+id/patient_view_diagnosis_label"
                    android:layout_toRightOf="@+id/patient_view_diagnosis_label"
                    android:layout_marginLeft="4dp"
                    android:text="TextView" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/patient_profile_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/user_icon" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:background="@color/color_beige_2a" >

        <SurfaceView
            android:id="@+id/patient_chart_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:background="@color/color_beige_3a"
        android:orientation="vertical"
        android:weightSum="7" >

        <TextView
            android:id="@+id/list_item_check_in_food_text"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@color/color_beige_2a"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Prescriptions:" />

        <ListView
            android:id="@+id/patient_prescriptions_list_view"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="4" >
        </ListView>

        <Button
            android:id="@+id/search_name_button"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2"
            android:onClick="editPrescriptions"
            android:text="Edit prescriptions" />

    </LinearLayout>

</LinearLayout>
